--- a/watchtv/client/src/Styles/Edit-Profile.css
+++ b/watchtv/client/src/Styles/Edit-Profile.css
@@ -48,11 +48,14 @@
     background: none;
     border: none;
     font-size: 1rem;
-    color: #6c757d;
+    color: #007bff;
     cursor: pointer;
+    top: 18px;
+    right: 15px;
+    font-weight: 600;
 }
 
-.crop-container {
+.profile-crop-container {
     position: relative;
     width: 100%;
     max-width: 160px;
@@ -67,10 +70,27 @@
     margin: 0 auto;
 }
 
-.crop-container img {
+.profile-crop-container img {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+}
+
+.remove-profile-image-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: rgba(255, 255, 255, 0.8);
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .edit-profile-details-container {
@@ -93,7 +113,7 @@
     margin-right: 10px;
 }
 
-.box-label {
+.profile-box-label {
     font-size: 16.5px;
     min-width: 100px;
 }
@@ -116,11 +136,19 @@
     overflow-y: auto;
 }
 
+.profile-bio-count{
+    position: absolute;
+    right: 36px;
+    bottom: 114px;
+    opacity: 0.55;
+    font-size: 13px;
+}
+
 .edit-profile-controls-container {
     display: flex;
     justify-content: flex-start;
     width: 100%;
-    gap: 61px;
+    gap: 42px;
 }
 
 .edit-profile-controls-container button {
@@ -133,12 +161,12 @@
     margin: 0;
 }
 
-.edit-profile-controls-container button#save {
+.edit-profile-controls-container button#update {
     background-color: #007bff;
     color: #fff;
 }
 
-.edit-profile-controls-container button#save:hover {
+.edit-profile-controls-container button#update:hover {
     background-color: #0056b3;
 }
 
@@ -150,4 +178,33 @@
 
 .edit-profile-controls-container button#cancel:hover {
     background-color: #a71d2a;
+}
+
+body.dark-mode .edit-profile-container {
+    background-color: #121212;
+}
+
+body.dark-mode .edit-profile-form-container {
+    background-color: #1c1c1c;
+}
+body.dark-mode .edit-profile-details-container label {
+    color: #ededed;
+}
+
+body.dark-mode .edit-profile-details-container input[type="text"],
+body.dark-mode .edit-profile-details-container input[type="date"],
+body.dark-mode .edit-profile-details-container input[type="number"],
+body.dark-mode .edit-profile-details-container textarea {
+    background-color: #1c1c1c;
+    border: 1px solid #444444;
+    color: #ededed;
+}
+
+body.dark-mode .edit-profile-image-container {
+    background-color: #2E2E2E;
+    border-color: #444444;
+    color: #B0BEC5;
+}
+body.dark-mode .edit-profile-image-container button {
+    color: #66b2ff;
 }
