--- a/watchtv/client/src/Styles/Dashboard.css
+++ b/watchtv/client/src/Styles/Dashboard.css
@@ -293,33 +293,33 @@ body.dark-mode .dropdown-item:hover {
 .Banner {
   position: relative;
   width: fit-content;
-  height: 700px;
-  height: 700px;
+  height: 500px;
   overflow: hidden;
   
 }
 
+/* Ensure the slider container takes full width and height */
 .slider {
   position: relative;
   width: 100%;
+  height: 100%;
   display: flex;
-  transition: transform 0.01s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  /* overflow: hidden; Hide overflow to ensure only the current slide is visible */
 }
 
+/* Ensure each slide takes full width and height of the slider container */
 .slide {
   min-width: 100%;
-  box-sizing: border-box;
-  transition: transform 0.5s ease-in-out;
+  height: 100%;
+
 }
 
+/* Force the image to take full width and height of the slide container */
 .slide img {
   width: 100%;
-  display: block;
-  transition: transform 0.5s ease-in-out;
-}
-
-.slide:hover img {
-  transform: scale(1.05);
+  height: 100%;
+  object-fit: fill; /* Do not preserve aspect ratio */
 }
 
 .prev,
